# kai

./: CMakeLists.txt
apps/: kai.cpp  test.cpp
include/kai/: comm.h  config.h  db.h  net.h  scripting.h  structs.h  sysdep.h
src/: comm.cpp  config.cpp  db.cpp  net.cpp  playview.cpp  scripting.cpp
